Add coverage for Code Climate and Coveralls.io

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -3,6 +3,11 @@ engines:
     enabled: true
   duplication:
     enabled: true
+    config:
+      languages:
+      - javascript
+  fixme:
+      enabled: true
 ratings:
   paths:
   - src/**
