--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ sudo: false
 
 before_install:
   - npm install -g typings
+  - npm install -g codeclimate-test-reporter
+
+after_script:
+  - codeclimate-test-reporter < coverage/report-lcov/lcov.info
+  - node_modules/.bin/coveralls < coverage/report-lcov/lcov.info
 
 #deploy:
 #  provider: npm
