--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "url": "https://github.com/MediaMonks/seng-config.git"
   },
   "devDependencies": {
+    "coveralls": "^2.11.6",
     "istanbul-instrumenter-loader": "^0.1.3",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.19",
