--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.3",
+    "rimraf": "^2.6.1",
     "tslint": "^3.3.0",
     "typedoc": "ThaNarie/typedoc",
     "typescript": "^2.2.2",
