--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prepublish": "npm run build",
-    "build": "rm -rf dist && tsc -p ./",
+    "build": "rimraf -rf dist && tsc -p ./",
     "test": "tsc -p ./test && karma start karma.conf.js --single-run --browsers PhantomJS",
     "doc": "typedoc --out doc/typedoc/ src/",
     "lint": "tslint -c tslint.json src/**/*.ts"
