Add typeRoots to tsconfig and remove browser.d.ts reference

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,12 @@
 		"preserveConstEnums": true,
 		"sourceMap": false,
 		"experimentalDecorators": true,
-		"outDir": "./dist"
+		"outDir": "./dist",
+    "typeRoots": [
+      "node_modules/@types"
+    ]
 	},
 	"files": [
-    "./typings/browser.d.ts",
 		"./src/index.ts"
 	]
 }
