--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "prepublish": "npm run build",
-    "build": "rimraf -rf dist && tsc -p ./",
+    "build": "shx rm -rf dist && tsc -p ./",
     "test": "tsc -p ./test && karma start karma.conf.js --single-run --browsers PhantomJS",
     "doc": "typedoc --out doc/typedoc/ src/",
     "lint": "tslint -c tslint.json src/**/*.ts"
@@ -37,7 +37,7 @@
     "karma-phantomjs-launcher": "^1.0.0",
     "karma-webpack": "^1.7.0",
     "phantomjs-prebuilt": "^2.1.3",
-    "rimraf": "^2.6.1",
+    "shx": "^0.2.2",
     "tslint": "^3.3.0",
     "typedoc": "^0.5.10",
     "typescript": "^2.2.2",
